Compiler/src/main/java/Testing/Tests/SemanticTests/AST/failing/VariableAccessNotArray.ru
/? Caso de prueba en donde se intenta acceder como array a una variable que no es de tipo array
/? Salida esperada:
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 18 | COLUMNA 6 | LA VARIABLE NO ES UN ARREGLO


struct B{

}
impl B{
.(){}}


start{
Int j;
Int k;
k = (j[2]);
}
